--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,3 +1,16 @@
+*{
+    max-width: 100%;
+}
 .Pokecard{
     border: 2px solid teal;
+    width: 280px;
+    padding: 10px;
+    margin: 5px;
+    box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, .6);
+    text-align: center;
+    border-radius: 5px;
+} 
+
+.Pokecard-data{
+    font-size: 20px;
 }
